# filesystem

./: .gitignore  CMakeLists.txt  FileSystemManager.cc  FileSystemManager.h  Main.cc  README.md  set_up_google_test.sh
include/: FileSystemManager.h  HelperMethods.h  Structs.h
input/: test.txt
src/: FileSystemManager.cc  HelperMethods.cc  Main.cc
tests/: FileSystemTests.cc
